Add Junior Developer experience at Arcasan Software
Added experience details for Junior Developer role at Arcasan Software Pvt Ltd, highlighting contributions to web performance and analytics dashboard development.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       </div>
       <div class="timeline-item" data-aos="fade-up">
         <div class="timeline-content">
+          <h3>Arcasan Software Pvt Ltd – Junior Developer</h3>
+          <span>Oct 2023 – June 2024</span>
+          <p>Implemented WebP image format across front-end assets, reducing bandwidth usage and improving mobile performance. Built a modular customer analytics dashboard using Flask (Python) for logic and Spring Boot (Java) for backend services, with integrated RESTful APIs and real-time database operations. Defined and implemented technical specifications: designed database schemas, set access control rules, and documented RESTful interfaces, resulting in faster deployment cycles.</p>
+        </div>
+      </div>
+      <div class="timeline-item" data-aos="fade-up">
+        <div class="timeline-content">
           <h3>SmartKnower – Data Science Intern</h3>
           <span>Jan 2022 – March 2022</span>
           <p>Identified high-risk credit customers using unsupervised K-means clustering on 150k+ customer records, driving more informed risk segmentation. Delivered actionable insights to stakeholders by analyzing data trends with Python (Pandas, NumPy) and presenting clear EDA visuals. Recommended targeted marketing strategies based on model-driven insights with 87% clustering accuracy.</p>
